# csc27_ML_distributed

./: .gitignore  Dockerfile  Dockerfile.Process  Dockerfile.SharedResource  Dockerfile.client  Dockerfile.proxy  Dockerfile.server  Makefile  README.md  docker-compose.yml  example_client.ipynb  nginx.conf  pyproject.toml  requirements.txt  serverML.py
data/: train_A.csv  train_B.csv  train_C.csv
data/B/: data.csv
data/C/: data.csv
data/house_pricing/A/: data.csv
data/house_pricing/C/: data.csv
data/house_pricing/D/: data.csv
data/house_pricing/other/: make_json.py  one_prediction_house_pricing_test.json
docs/: schema.drawio
models/: __init__.py  base.py  dummy.py  linearRegression.py
scripts/: start.sh
server/: example_client.py  server_model.py
src/csc27_ML_distributed/client/labMapReduce/mapreduce/: master.go  master_scheduler.go
src/csc27_ML_distributed/proxy/: go.mod  go.sum
src/csc27_ML_distributed/proxy/api/: app.go
src/csc27_ML_distributed/proxy/app/: app.go
src/csc27_ML_distributed/proxy/connect/: rpc.go
src/csc27_ML_distributed/proxy/evaluate/: evaluate.go
src/csc27_ML_distributed/proxy/fit/: fit.go
src/csc27_ML_distributed/proxy/predict/: predict.go
src/csc27_ML_distributed/server/: __init__.py  example_client.py
src/csc27_ML_distributed/server/api/: app.py
src/csc27_ML_distributed/server/config/: __init__.py  config.py  ml_metrics.py  ml_models.py  ml_server.py
src/csc27_ML_distributed/server/log/: logger.py
src/csc27_ML_distributed/server/models/: base.py  config.py  ml_metric.py  ml_model.py  preprocessor.py
src/csc27_ML_distributed/server/services/: __init__.py  ml_server.py  rpc_ml_server.py
src/labMapReduce/: go.mod
src/labMapReduce/wordcount/: wordcount.go
tests/server/: local_server.py  prod_server.py  sequential.py
(+9 files in other folders)
